<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navbar_btn_internet"
            android:icon="@drawable/ic_baseline_network_wifi_24px"
            android:tint="@color/colorLavalDark"
            android:title="@string/navbar_title_1" />
        <item
            android:id="@+id/navbar_btn_about"
            android:icon="@drawable/ic_baseline_info_24px"
            android:title="@string/navbar_title_2"
            android:tint="@color/colorLavalDark" />
    </group>

    <item android:title="@string/navbar_subtitle">
        <menu>
            <item
                android:id="@+id/navbar_btn_form"
                android:icon="@drawable/ic_baseline_edit_24px"
                android:title="@string/navbar_title_3"
                android:tint="@color/colorLavalDark" />
            <item
                android:id="@+id/navbar_btn_profil"
                android:icon="@drawable/ic_baseline_account_circle_24px"
                android:title="@string/navbar_title_4"
                android:tint="@color/colorLavalDark" />
        </menu>
    </item>


</menu>
